Code clean up. Implement dependency injection.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -13,3 +13,7 @@ ktor {
         driver = ${DB_DRIVER}
     }
 }
+stack_overflow {
+    host = "https://api.stackexchange.com"
+    site = "stackoverflow"
+}
